drop old alpha events/alerts fields (#818)
* drop old events/alerts fields

* fix mypy
